# clodes3

./: .gitignore
Docs/: connections.md
Docs/Camera-based Attendance Aggregator/: Messages.md  TopicsAndQueues.graphml
ReqIF/hu.bme.mit.inf.clodes3/: Spec.reqif
Source/CameraProcessingService/: docker-compose-local.yml  docker-compose.yml
Source/CameraProcessingService/AttendanceAggregator/: app.py
Source/CameraProcessingService/CnnProcessor/: Dockerfile  app.py
Source/CameraProcessingService/FrameConcentrator/: app.py
Source/CameraProcessingService/ImageProcessor/: Dockerfile  app.py
Source/CameraProcessingService/ImageProcessorCPP/: main.cpp
Source/CameraProcessingService/ImgProcGateway/: main.py
Source/CameraProcessingService/Lifecycle/: main.py
Source/CameraProcessingService/PiCameraCapture/: app.py
Source/CameraProcessingService/ProcessingAPI/: app.py
Source/CameraProcessingService/TrainDataBackend/: cv-backend.py
Source/CameraProcessingService/TrainDataFrontend/: .babelrc  package.json  (+1 more)
Source/camera-processor/: common-services.yml  docker-compose-local.yml  docker-compose.yml
Source/html5-button/: Procfile  requirements.txt  websocket.html  websocket.py
Source/html5-button-fblogin/: index.html
Source/laboratory-machine-agent/: laboratory-machine-agent.py  test-machine-agent.py
Source/laboratory-machine-agent-aggregator/: Procfile  laboratory-machine-agent-aggregator.py
Source/occupancy-cv/: .gitignore
Source/occupancy-cv/cv-motion/: CMakeLists.txt  main.cpp
SysML/: CloDeS3.mdzip
hu.bme.mit.inf.clodes3/: .project  Main.reqif
(+48 files in other folders)
